{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 41,
  "lineage": "40cb787a-a5cc-27f8-dd6b-cd092fc5c8a1",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/github-actions-terraform-k8s/global/networks/prod-01",
            "name": "prod-01",
            "network_id": 6942982291104814812,
            "numeric_id": "6942982291104814812",
            "self_link": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/global/networks/prod-01",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/regions/europe-west1/subnetworks/prod-01-subnet"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.14.0.1",
            "id": "projects/github-actions-terraform-k8s/regions/europe-west1/subnetworks/prod-01-subnet",
            "ip_cidr_range": "10.14.0.0/16",
            "name": "prod-01-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/global/networks/prod-01",
            "private_ip_google_access": true,
            "project": "github-actions-terraform-k8s",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.24.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.34.0.0/20",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/regions/europe-west1/subnetworks/prod-01-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8811134833974662822
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iap_tunnel_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-11T19:26:48.816-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/github-actions-terraform-k8s/global/firewalls/gha-runner-iap-ingress",
            "log_config": [],
            "name": "gha-runner-iap-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/global/networks/prod-01",
            "params": [],
            "priority": 1000,
            "project": "github-actions-terraform-k8s",
            "self_link": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/global/firewalls/gha-runner-iap-ingress",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [
              "github-actions-runner@github-actions-terraform-k8s.iam.gserviceaccount.com"
            ],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "google_service_account.runner"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "runner_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "53"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "53"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-02-11T19:26:48.989-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/github-actions-terraform-k8s/global/firewalls/gha-runner-egress",
            "log_config": [],
            "name": "gha-runner-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/global/networks/prod-01",
            "params": [],
            "priority": 1000,
            "project": "github-actions-terraform-k8s",
            "self_link": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/global/firewalls/gha-runner-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [
              "github-actions-runner@github-actions-terraform-k8s.iam.gserviceaccount.com"
            ],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "google_service_account.runner"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "SNP_SVSM_CAPABLE",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/zones/europe-west1-b/disks/gha-runner"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-02-11T20:35:09.899-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/github-actions-terraform-k8s/zones/europe-west1-b/instances/gha-runner",
            "instance_id": "6296623870931691154",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "en0EnCtuOIA=",
            "metadata_startup_script": "#!/bin/bash\nset -xe\n#exec \u003e /var/log/startup-script.log 2\u003e\u00261\n\napt-get update \u0026\u0026 apt-get install -y ca-certificates curl gnupg lsb-release jq\n\n# Install Google Cloud SDK and GKE auth plugin\ncurl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg --yes\necho \"deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main [...]
            "name": "gha-runner",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/global/networks/prod-01",
                "network_ip": "10.14.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/regions/europe-west1/subnetworks/prod-01-subnet",
                "subnetwork_project": "github-actions-terraform-k8s"
              }
            ],
            "project": "github-actions-terraform-k8s",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/zones/europe-west1-b/instances/gha-runner",
            "service_account": [
              {
                "email": "github-actions-runner@github-actions-terraform-k8s.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "github-runner"
            ],
            "tags_fingerprint": "0I7D_wzKxOY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_subnetwork.subnet",
            "google_service_account.runner"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-11T19:26:35.036-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/github-actions-terraform-k8s/regions/europe-west1/routers/gha-runner-nat-router",
            "name": "gha-runner-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/global/networks/prod-01",
            "project": "github-actions-terraform-k8s",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/regions/europe-west1/routers/gha-runner-nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "github-actions-terraform-k8s/europe-west1/gha-runner-nat-router/gha-runner-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "gha-runner-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "github-actions-terraform-k8s",
            "region": "europe-west1",
            "router": "gha-runner-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/github-actions-terraform-k8s/regions/europe-west1/subnetworks/prod-01-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "data.google_compute_subnetwork.subnet",
            "google_compute_router.nat_router"
          ]
        }
      ]
    }
  ]
}